--- a/cuda_easy/thrust.tex
+++ b/cuda_easy/thrust.tex
@@ -474,16 +474,16 @@
 
 \section{Thrust}
 
-\input{_thrust.tex}
+%% \input{_thrust.tex}
 
-%% \section{Case Studies}
+\section{Case Studies}
 
-%% \input{median.tex}
+\input{median.tex}
 
-%% \begin{frame}
-%%   \frametitle{Lattice Monte-Carlo Simulation}
-%%   Courtesy of Michael Wang.
-%% \end{frame}
+\begin{frame}
+  \frametitle{Lattice Monte-Carlo Simulation}
+  Courtesy of Michael Wang.
+\end{frame}
 
 %% \section{Conclusion}
 
