Working on webinar talk.
Making a webinar for software testing. Decided to create
the slides from a different theme called "Median" by using
a nice color palette called "Base16".

--- a/tao/sed/benchmarks.tex
+++ b/tao/sed/benchmarks.tex
@@ -54,7 +54,7 @@ blog. Or I can email it to you.
 \subsection{Merger Trees}
 
 I've written a Python utility to generate randomised merger trees. A
-suite or parameters controls the depth of each tree and the ranges of
+suite of parameters controls the depth of each tree and the ranges of
 the various attributes each galaxy may possess (star formation rate,
 cold gas mass, etc).
 
@@ -67,7 +67,7 @@ attribute values.
 The same Python utility as above also generates single stellar
 populations, but does so in a very specific manner. SSP data is
 generated to ensure that, when combined with merger tree data, will
-produce rebinned and summed data that perfectly matches any given
+produce rebinned and summed data that matches any given
 input function. This allows us to generate a combination of data that
 will result in the functions later required for benchmarking.
 
