--- a/tao/sed/magnitudes.tex
+++ b/tao/sed/magnitudes.tex
@@ -56,18 +56,18 @@ as
 I & = & \int_\nu f_\nu r \dx{\nu} \\
 R & = & \int_\nu r \dx{\nu}
 \end{eqnarray*}
-where $f_\nu$ is the sepctral energy density of the object in
-$erg\cdot s^{-1}\cdot cm^{-2}\cdot Hz^{-1}$ and $r$ is a unitless transmission
+where $f_\nu$ is the spectral energy density of the object in
+$erg\cdot s^{-1}\cdot cm^{-2}\cdot Hz^{-1}$ and $r$ is a unit-less transmission
 response filter. This definition of $F_\nu$ is taken from \href{http://dls.physics.ucdavis.edu/calib/vegaab.html}{this page}, under AB system.
 
-The spectral energy densitiy will be given
+The spectral energy density will be given
 to us not as a function of frequency, as we need, but instead as
 a function of wavelength and in units of
 $erg\cdot s^{-1}\cdot cm^{-2}\cdot \AA^{-1}$. We refer to this quantity as
 $f_\lambda$. In general $f_\lambda \ne f_\nu$, so we
 will need to find $f_\nu$ in terms of $f_\lambda$.
 We know that the energy of these values
-must be equal for any arbitrary subdomain,
+must be equal for any arbitrary sub-domain,
 \[ f_\nu \dx{\nu} = f_\lambda \dx{\lambda} \; , \]
 which can be rearranged to produce
 \[ f_\nu = f_\lambda \frac{\dx{\lambda}}{\dx{\nu}} \; . \]
@@ -99,7 +99,7 @@ frequency domain. This can be seen by writing the first form of
 $I$ and its transformed version,
 \[ \int_\nu f_\nu r \dx{\nu} = \int_\lambda f_\lambda r \dx{\lambda} \; . \]
 In addition to being very convenient, as we have no need
-to transform any quantites to frequency, this energy balance also
+to transform any quantities to frequency, this energy balance also
 demonstrates that there is no need to perform any transformation on
 $r$ during the shift from $\nu$ to $\lambda$.
 
