--- a/Code Testing for Researchers/assert.tex
+++ b/Code Testing for Researchers/assert.tex
@@ -35,8 +35,7 @@
   char* alloc_a_string( size_t size ) {
     char* p = (char*)malloc( size );
 
-    // What if the allocation fails?
-    // Probably a segfault.
+    // What happens if the allocation fails?
 
     return p;
   }
